--- a/DE/first_decl.html
+++ b/DE/first_decl.html
@@ -55,7 +55,7 @@
 <a href="#">PRONOUN</a>
 <a href="#">WORD ORDER</a>
 <a href="#">ANALYSE</a>   
-<a class="fa fa-search" style="color:#f9f9f9;">SEARCH</a>
+<a class="fa fa-search" style="color:#f8f7f7;">SEARCH</a>
 <br/>
 
 </div>
@@ -143,7 +143,7 @@ endof caroussel
         <a href="#">Semantics</a>
         <a href="#">Santax</a>
         <a href="#">Word Formation</a>
-        <a href="#">Analyse</a>
+        <a href="#">Analyse(Phrase Analysis)</a>
         </div>
 
 </div>
