--- a/RadioButton_js.html
+++ b/RadioButton_js.html
@@ -22,7 +22,7 @@
 
     <div id="header_div_in_body" style="background-color: gray;">
     <nav style="background-color: black; color: aliceblue;">
-        <a href="#">The sheer Power!</a>   |
+        <a href="#">The Sheer Power!</a>   |
         <a href="#">Old School</a>    |
         <a href="#">The Legend Lewis </a>    |
         <a href="#">1920s</a>          |
