--- a/bmi.html
+++ b/bmi.html
@@ -35,7 +35,7 @@ width:20%;
 
         <div class="main_div">
 
-        <h2 style="color:white;">Gib deine Gewicht und Größe ein! </h2>
+        <h2 style="color:#fff;">Gib deine Gewicht und Größe ein! </h2>
 <input id= "hi" value=" "  >
 <label for="hi">Größe</label>
 <br/>
