--- a/quiz.html
+++ b/quiz.html
@@ -24,11 +24,12 @@ alert("Please enter the answer in lowercase in the box,below the options, then p
 /***********************************/
 function dedication()
 {
-alert("This quiz is dedicated to Arash");
+alert("This Quiz is Dedicated to Arash");
 }
 </script>
 </head>
 <!--
+Commented Section.
 <script>
 var note1,note2,note3,note4,note5;
 </script>
