--- a/boot.html
+++ b/boot.html
@@ -8,9 +8,7 @@
 function tog()
 {
 alert("This is an on/off switch.");
-
 }
-
 </script>
 
 
@@ -58,7 +56,7 @@ color:white;
 <script>
 function func()
 {
-alert("This part will be completed");
+alert("This part will be completed.");
 }
 </script>
 <div class="continer-fluid p-5 bg-secondary text-white text-center">
