--- a/quiz.html
+++ b/quiz.html
@@ -299,9 +299,10 @@ document.getElementById("5.3").innerHTML="Your note until now is:" +(note1+note2
 <button onclick="func5_1()">PUSH</button>
 <button onclick="func5_2()">Get Result</button>
 <!-- ----------------------------------------->
-<!-- Ende -->
+<!-- Das Ende -->
 <!-- ----------------------------------------->
 
+ 
  <p id="last"></p>
 <p id="assess">Assessment</p>
 
